[project]
name = "acfun-downloader"
version = "0.1.0"
description = "A command-line tool for downloading videos from AcFun"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AcFun Downloader Contributors", email = "example@example.com"}
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "fake-useragent>=1.1.0",
    "requests>=2.27.0",
    "tqdm>=4.62.0",
]

[project.scripts]
acfun-dl = "src.cli:main"

[project.urls]
Repository = "https://github.com/yourusername/acfun-downloader"
Documentation = "https://github.com/yourusername/acfun-downloader#readme"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
